[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/SnakeHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/SnakeTail.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/Snake.gd" type="Script" id=3]
[ext_resource path="res://sprites/purple_square.png" type="Texture" id=4]
[ext_resource path="res://sprites/green_square.png" type="Texture" id=5]

[node name="Snake" type="Node2D"]
physics_interpolation_mode = 2
script = ExtResource( 3 )
head_texture = ExtResource( 4 )
body_texture = ExtResource( 5 )

[node name="SnakeHead" parent="." instance=ExtResource( 1 )]

[node name="SnakeTail" parent="." instance=ExtResource( 2 )]
position = Vector2( -32, 0 )

[node name="SnakeTail2" parent="." instance=ExtResource( 2 )]
position = Vector2( -64, 0 )

[node name="SnakeTail3" parent="." instance=ExtResource( 2 )]
position = Vector2( -96, 0 )
